k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tiketi
  labels:
    name: tiketi
    environment: production
    criticality: high
